# whatsapp-school-assistant-demo

./: .gitignore  DEMO-GESPRAECH.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  engine.py  main.py
app/data/: knowledge_base.json
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_engine.py
workflows/: n8n-school-whatsapp-assistant.json
