[project]
name = "whatsapp-school-assistant-demo"
version = "1.0.0"
description = "Offline portfolio demo for a grounded school WhatsApp assistant."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

